--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
       <p><strong>Phone:</strong> +971 50 758 8500</p>
       <p><strong>Phone:</strong> +971 56 465 8050</p>
       <div class="contact-details1">
-        <p><strong>Email:</strong> sales@starsexhibitions.com</p>
-        <p><strong>Website:</strong> www.starsexhibitions.com</p>
+        <p><strong>Email:</strong> sales@starsteamevents.com</p>
+        <p><strong>Website:</strong> www.starsteamevents.com</p>
       </div>
     </div>
 
